finish light/dark mode but need to fix 2 images

--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,28 @@ body {
   color: white; */
 }
 
-/****************** change to DarkMode CSS*********************/
+/****************** change to DarkMode and backward CSS*********************/
+.colorWhite {
+  background-color: black;
+  color: white;
+}
+
+.colorBorderWhite {
+  border: 1px solid white;
+}
+
+.colorBorderBlack {
+  border: 1px solid black;
+}
+
+/****************** change to DarkMode and backward CSS*********************/
+
+
+
 
 
 /* images class */
 .sunMoon {
-  height: 30px;
-}
-
-.lightMode {
   height: 30px;
 }
 
@@ -35,27 +48,26 @@ body {
 
 /* box seletor */
 .text-box-left {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   padding-top: 30px;
   padding-bottom: 30px;
   border-radius: 8px;
   width: 85%;
   margin: 5px 5%;
-  /* background-color: white; */
 }
 
-.orninalNum{
+.orninalNum {
   float: left;
   position: relative;
   left: 10px;
 }
 
-.textable{
+.textable {
   display: inline-block;
   margin: auto;
 }
 
-.tickmeBox{
+.tickmeBox {
   float: right;
   display: inline-block;
   width: 20px;
@@ -65,19 +77,18 @@ body {
   top: -3px;
 }
 
-.text-box-center1{
-  border: 1px solid black;
+.text-box-center1 {
+  /* border: 1px solid black; */
   padding-top: 20px;
   padding-bottom: 20px;
   border-radius: 8px;
   width: 90%;
   height: 250px;
   margin: 5px 5% 0;
-
 }
 
-.text-box-center2{
-  border: 1px solid black;
+.text-box-center2 {
+  /* border: 1px solid black; */
   padding-top: 20px;
   padding-bottom: 20px;
   border-radius: 8px;
@@ -86,8 +97,8 @@ body {
   margin: 5px 5% 0;
 }
 
-.text-box-center3{
-  border: 1px solid black;
+.text-box-center3 {
+  /* border: 1px solid black; */
   padding-top: 20px;
   padding-bottom: 20px;
   border-radius: 8px;
@@ -96,14 +107,14 @@ body {
   margin: 5px 5% 0;
 }
 
-.text-box-right{
-  border: 1px solid black;
+.text-box-right {
+  /* border: 1px solid black; */
   padding-top: 20px;
   padding-bottom: 20px;
   border-radius: 8px;
   width: 80%;
   height: 1px;
-  margin: 1px 10% ;
+  margin: 1px 10%;
   text-align: left;
 }
 
@@ -124,7 +135,7 @@ body {
   margin-bottom: 0;
 }
 
-.dailyH1{
+.dailyH1 {
   margin: 10px auto;
 }
 
@@ -143,23 +154,34 @@ body {
   text-align: center;
 }
 
-.hrCenter1{
-  width : 6%;
+.hrCenter1 {
+  width: 6%;
   margin: 0 auto;
 }
 
-.hrCenter2{
-  width : 5%;
+.hrCenter2 {
+  width: 5%;
   margin: 0 auto;
 }
-.hrCenter3{
-  width : 4%;
+
+.hrCenter3 {
+  width: 4%;
   margin: 0 auto;
 }
 
 /* vertical hr */
 .left-vertical {
   border-right: 2px solid black;
+  height: 850px;
+  width: 0;
+  position: absolute;
+  left: 25%;
+  top: 75px;
+  box-shadow: 5px 5px 10px 2px;
+}
+
+.left-vertical-white {
+  border-right: 2px solid white;
   height: 850px;
   width: 0;
   position: absolute;
@@ -178,10 +200,27 @@ body {
   box-shadow: 5px 5px 10px 2px;
 }
 
+.right-vertical-white {
+  border-right: 2px solid white;
+  height: 850px;
+  width: 0;
+  position: absolute;
+  left: 75%;
+  top: 75px;
+  box-shadow: 5px 5px 10px 2px;
+}
+
 /* horizontal hr */
 .topHr {
   height: 15px;
   border: 0;
   box-shadow: inset 0 12px 12px -12px;
   border-top: 2px solid black;
+}
+
+.topHrWhite {
+  height: 15px;
+  border: 0;
+  box-shadow: inset 0 12px 12px -12px;
+  border-top: 2px solid white;
 }
